--- a/index.html
+++ b/index.html
@@ -717,7 +717,9 @@
 							<p>+1 567 567 9876</p>
 						</div>
 					</div>
+			
 				</div>
+				<iframe src='https://webchat.botframework.com/embed/jcghft-bot?s=nm404lo1XMQ._rFy5l_nHXtwpCJVWpmrNo7y_N2cYeGgGpJ3h771ryY'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 				<div class="col-lg-4 address-grid">
 					<div class="row address-info">
 						<div class="col-md-3 col-4 address-left text-lg-center text-sm-right text-center">
