--- a/index.html
+++ b/index.html
@@ -734,6 +734,8 @@
 			</div>
 			<!-- //contact address -->
 		</div>
+		<iframe src='https://webchat.botframework.com/embed/jcghft-bot?s=nm404lo1XMQ._rFy5l_nHXtwpCJVWpmrNo7y_N2cYeGgGpJ3h771ryY'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+
 	</section>
 	<!-- //contact -->
 
